[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Sprites/char_test.png" type="Texture" id=1]
[ext_resource path="res://Src/Player.gd" type="Script" id=2]
[ext_resource path="res://Src/Tech/Shield.tscn" type="PackedScene" id=3]
[ext_resource path="res://Src/ShakeCamera.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/gun.png" type="Texture" id=5]
[ext_resource path="res://Src/Tech/Dash.tscn" type="PackedScene" id=6]
[ext_resource path="res://Src/GUI/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://Resources/WhiteFlash.shader" type="Shader" id=8]
[ext_resource path="res://Src/Tech/HomingMissils.tscn" type="PackedScene" id=9]
[ext_resource path="res://Src/Tech/RotatingLaser.tscn" type="PackedScene" id=10]
[ext_resource path="res://Src/GUI/PauseScene.tscn" type="PackedScene" id=11]
[ext_resource path="res://Resources/WalkParticles.tscn" type="PackedScene" id=12]
[ext_resource path="res://Src/GUI/DeadScreen.tscn" type="PackedScene" id=13]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/white_progress = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.03459, 10 )

[sub_resource type="Animation" id=3]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -9.40062, -13.0486 ), Vector2( -21.3268, -0.280615 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -73.1892, -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Gun:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Gun:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.113132, 0.0914383 ), Vector2( 7.60379, 2.75729 ), Vector2( 20.5121, 6.6859 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Gun:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 7.93715, 29.899 ]
}

[sub_resource type="Animation" id=5]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ), Vector2( 4, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/white_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
position = Vector2( 0, -0.187286 )
collision_layer = 2
collision_mask = 17
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
z_index = 2
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 5

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.210236, 1.68179 )
shape = SubResource( 2 )

[node name="Shield" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Gun" type="Sprite" parent="."]
position = Vector2( 1.11815, 3.04173 )
z_index = 3
texture = ExtResource( 5 )
offset = Vector2( 4.64657, 1.807 )
vframes = 2
hframes = 4

[node name="GunPoint" type="Node2D" parent="Gun"]
position = Vector2( 13.5551, 0.438295 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gun"]
anims/Shoot = SubResource( 3 )

[node name="Dash" parent="." instance=ExtResource( 6 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="PauseScene" parent="CanvasLayer" instance=ExtResource( 11 )]
visible = false

[node name="DeadScreen" parent="CanvasLayer" instance=ExtResource( 13 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Die = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Walk = SubResource( 6 )

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 7 )

[node name="HomingMissils" parent="." instance=ExtResource( 9 )]
timeout = 5.0
missil_nb = 20

[node name="RotatingLaser" parent="." instance=ExtResource( 10 )]

[node name="WalkParticle" parent="." instance=ExtResource( 12 )]
position = Vector2( 1.52588e-05, 7.89865 )
amount = 5
lifetime = 0.3
